--- a/index.html
+++ b/index.html
@@ -51,5 +51,6 @@
         <hr />
       </div>
     </main>
+    <footer>This app is for education use only, any resemblance to actual persons, living or dead, or actual events is purely coincidental.</footer>
   </body>
 </html>
